# karaka-lang

./: README.md  pyproject.toml
docs/: DESIGN.md  Karaka_Calling_Convention.docx  ROADMAP.md  medium-article.md  position-paper.md
examples/: arity_and_ordering_fixes.py  real_morphology_and_queries.py  robot_kitchen.py  rylands_fletcher.py
karaka_lang/: __init__.py  codegen.py  morphology.py  parser.py  sutra.py
tests/: test_parser.py
