[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "karaka-lang"
version = "0.2.0"
description = "A Paninian karaka-based calling convention for logic/relational programming"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Joy Bose" }]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["karaka_lang*"]
